Minor typo fix (#212)
### Summary of changes
Found some minor typos in the documentation, cleaned them up.

Mostly using this PR to learn the docs rollout process!

--- a/docs/linux/linux-releases-integration-guide.mdx
+++ b/docs/linux/linux-releases-integration-guide.mdx
@@ -58,7 +58,7 @@ This is an auth token that can be used as the "password" to make Memfault API
 requests which require Basic Authentication.
 
 To locate the token, hover over your name in the top right of the dashboard and
-select "My Profile". Copy/paste the token in the "User API Key" section.
+select "My Profile". Copy/paste the token from the "User API Key" section.
 
 This API key should be passed in as the `--password` parameter when using the
 Memfault CLI.
@@ -77,7 +77,7 @@ organization and project in the Memfault UI:
 This is a token that is used when pushing data between a device and the Memfault
 cloud. We will be using this to query for OTA Payloads in this tutorial. To
 locate this token you will also want to navigate to the "Settings" -> "General"
-page in the Memfault UI and copy/paste the token in the "Project Key" section.
+page in the Memfault UI and copy/paste the token from the "Project Key" section.
 
 ## Managing Your First Release
 
@@ -87,7 +87,7 @@ page in the Memfault UI and copy/paste the token in the "Project Key" section.
   <TabItem value="swupdate">
 
 SWUpdate expects OTA Payloads in its own `.swu` format. Read [documentation on
-SWUpdate][3] to learn how to create `.swu` files for yor project.
+SWUpdate][3] to learn how to create `.swu` files for your project.
 
   </TabItem>
   <TabItem value="custom">
