--- a/docs/mcu/da1469x-sdk-guide.mdx
+++ b/docs/mcu/da1469x-sdk-guide.mdx
@@ -2,24 +2,16 @@
 id: da1469x-sdk-guide
 title: DA1469x SDK Integration Guide
 sidebar_label: Dialog DA1469x
+description: "Integrate Memfault for Dialog's DA1469x product family."
 ---
 
-import SendingDataOverUdp from "@site/src/pages/_partials/_sending-data-over-udp.mdx";
-
 import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
 
 import UploadSymbolFile from "@site/src/pages/_partials/_steps/_upload-symbol-file.mdx";
-import DataTransferTroubleshooting from "@site/src/pages/_partials/_steps/_data-transfer-troubleshooting.mdx";
 import PostChunksLocally from "@site/src/pages/_partials/_steps/_post-chunks-locally.mdx";
-import PublishDataToCloud from "@site/src/pages/_partials/_steps/_publish-data-to-cloud.mdx";
 import DefineFirstTraceEvent from "@site/src/pages/_partials/_steps/_define-first-trace-event.mdx";
 import DefineFirstHeartbeat from "@site/src/pages/_partials/_steps/_define-first-heartbeat.mdx";
 import AddCliTestCommands from "@site/src/pages/_partials/_steps/_add-cli-test-commands.mdx";
-import FwSdkFeatures from "@site/src/pages/_partials/_steps/_sdk-features.mdx";
-import MetricTimerDependency from "@site/src/pages/_partials/_steps/_metric-timer-dependency.mdx";
-import RebootTrackingDependency from "@site/src/pages/_partials/_steps/_reboot-tracking-dependency.mdx";
 
 ## Overview
 
