--- a/docs/mcu/esp8266-rtos-sdk-guide.mdx
+++ b/docs/mcu/esp8266-rtos-sdk-guide.mdx
@@ -2,6 +2,7 @@
 id: esp8266-rtos-sdk-guide
 title: ESP8266 RTOS Integration Guide
 sidebar_label: ESP8266 RTOS SDK
+description: "Integrate Memfault for the ESP8266 RTOS SDK."
 ---
 
 import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
