--- a/docs/mcu/nrf-connect-sdk-guide.mdx
+++ b/docs/mcu/nrf-connect-sdk-guide.mdx
@@ -2,6 +2,7 @@
 id: nrf-connect-sdk-guide
 title: nRF Connect SDK Integration Guide
 sidebar_label: nRF Connect SDK
+description: "Integrate Memfault using the nRF Connect SDK."
 ---
 
 import SendingDataOverUdp from "@site/src/pages/_partials/_sending-data-over-udp.mdx";
