--- a/docs/mcu/pinnacle-100-guide.mdx
+++ b/docs/mcu/pinnacle-100-guide.mdx
@@ -2,6 +2,7 @@
 id: pinnacle-100-guide
 title: Pinnacle™ 100 Modem Integration Guide
 sidebar_label: Laird Pinnacle™ 100
+description: "Integrate Memfault using Laird's Pinnacle™ 100 Cellular Modem."
 ---
 
 import MqttTopic from "@site/src/pages/_partials/_mqtt/_topic.mdx";
