--- a/docs/mcu/symbol-file-build-ids.mdx
+++ b/docs/mcu/symbol-file-build-ids.mdx
@@ -2,6 +2,7 @@
 id: symbol-file-build-ids
 title: Symbol Files & Build Ids
 sidebar_label: Symbol Files & Build Ids
+description: "Learn how Memfault identifies symbols to match them to versions."
 ---
 
 import AddBuildId from "@site/src/pages/_partials/_steps/_add-build-id.mdx";
