Minor spelling fixes (#215)

--- a/blog/2019-11-01-chunk-transport.mdx
+++ b/blog/2019-11-01-chunk-transport.mdx
@@ -1,6 +1,6 @@
 ---
 title: Streamlined API Uploads
-# TODO: change add a link direct to the chunk tansport docs once they're eaten by docusaurus
+# TODO: change add a link direct to the chunk transport docs once they're eaten by docusaurus
 ---
 
 ## Chunk Transport
