--- a/docs/mcu/arm-gcc-guide.mdx
+++ b/docs/mcu/arm-gcc-guide.mdx
@@ -278,7 +278,7 @@ void send_memfault_data(void) {
 ### Upload Symbol File
 
 At this point you should be able to generate a test trace event and push it to
-the Memfault UI. You can confirm the issue has arrived succesfully by navigating
+the Memfault UI. You can confirm the issue has arrived successfully by navigating
 to the "Issues" page. Follow the link pointed to below and upload a symbol file.
 
 ![](/img/docs/mcu/first-trace-min.png)
@@ -287,7 +287,7 @@ After this step you will see the trace in the list of issues!
 
 :::tip
 
-You can programatically upload symbol files with the
+You can programmatically upload symbol files with the
 [Memfault CLI tool](/docs/ci/install-memfault-cli).
 
 :::
@@ -304,7 +304,7 @@ to help!
   pass through your `user_transport_send_chunk_data()` implementation to test
   data transfer in isolation.
 - A [GDB Script](/docs/mcu/test-data-collection-with-gdb) which can be installed
-  to send chunks programatically every time a breakpoint is hit.
+  to send chunks programmatically every time a breakpoint is hit.
 
 ### Next Steps
 
