--- a/docs/mcu/data-source-async-access.mdx
+++ b/docs/mcu/data-source-async-access.mdx
@@ -35,7 +35,7 @@ reads to coredump storage could be achieved.
 
 :::note
 
-In order to operate in asychronous operation mode, RLE data source compression
+In order to operate in asynchronous operation mode, RLE data source compression
 must be disabled. This is because RLE Compression requires several passes over
 the underlying data. The feature can be disabled by either removing
 `memfault_data_source_rle.c` from your build system or by adding the define
