--- a/docs/mcu/esp8266-rtos-sdk-guide.mdx
+++ b/docs/mcu/esp8266-rtos-sdk-guide.mdx
@@ -315,7 +315,7 @@ Success
 ### Upload Symbol File
 
 At this point you should be able to generate a test trace event and push it to
-the Memfault UI. You can confirm the issue has arrived succesfully by navigating
+the Memfault UI. You can confirm the issue has arrived successfully by navigating
 to the "Issues" page. Follow the link pointed to below and upload a symbol file.
 
 ![](/img/docs/mcu/first-trace-min.png)
@@ -324,7 +324,7 @@ After this step you will see the trace in the list of issues!
 
 :::tip
 
-You can programatically upload symbol files with the
+You can programmatically upload symbol files with the
 [Memfault CLI tool](/docs/ci/install-memfault-cli).
 
 :::
@@ -341,4 +341,4 @@ to help!
   pass through your `user_transport_send_chunk_data()` implementation to test
   data transfer in isolation.
 - A [GDB Script](/docs/mcu/test-data-collection-with-gdb) which can be installed
-  to send chunks programatically every time a breakpoint is hit.
+  to send chunks programmatically every time a breakpoint is hit.
