--- a/docs/mcu/runtime-control.mdx
+++ b/docs/mcu/runtime-control.mdx
@@ -63,5 +63,5 @@ These instructions are based on
 ### CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=n
 
 If `CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=n` (default), you'll need to follow the
-[overalll strategy](#overall-strategy) explained above when disabling the chunks
+[overall strategy](#overall-strategy) explained above when disabling the chunks
 sending.
