--- a/docs/mcu/self-serve-local-testing.mdx
+++ b/docs/mcu/self-serve-local-testing.mdx
@@ -42,6 +42,6 @@ leveraging Memfault and verify that everything is working properly.
 ### Next Steps
 
 With data collection verified locally, the final step is sending the data
-progamatically to the Memfault cloud.
+pragmatically to the Memfault cloud.
 
 <PublishDataToCloud />
