--- a/docs/mcu/symbol-file-build-ids.mdx
+++ b/docs/mcu/symbol-file-build-ids.mdx
@@ -85,7 +85,7 @@ memfault --org-token $ORG_TOKEN --org acme-inc --project smart-sink \
 :::note
 
 <details>
-  <summary>If you are using Link-Time Optimzation in your build, you may get an
+  <summary>If you are using Link-Time Optimization in your build, you may get an
 error when uploading the symbol file</summary>
 
 Using
