--- a/docs/mcu/xilinx-a53-sdk-guide.mdx
+++ b/docs/mcu/xilinx-a53-sdk-guide.mdx
@@ -11,7 +11,7 @@ a system using the Xilinx A53 (i.e Zynq UltraScale+) in a baremetal environment.
 import CloneSdk from "@site/src/pages/_partials/_steps/_clone-sdk.mdx";
 import CorePlatformDependencies from "@site/src/pages/_partials/_steps/_core-platform-dependencies.mdx";
 import TimerDependencies from "@site/src/pages/_partials/_steps/_timer-dependencies.mdx";
-import AcrhitectureDependencies from "@site/src/pages/_partials/_steps/_arch-dependencies.mdx";
+import ArchitectureDependencies from "@site/src/pages/_partials/_steps/_arch-dependencies.mdx";
 import RebootReasonDependency from "@site/src/pages/_partials/_steps/_reboot-reason-dependency.mdx";
 import DefineFirstHeartbeat from "@site/src/pages/_partials/_steps/_define-first-heartbeat.mdx";
 import DefineFirstTraceEvent from "@site/src/pages/_partials/_steps/_define-first-trace-event.mdx";
@@ -88,9 +88,9 @@ infrastructure for your own platform if you do not yet have one set up.
 
 <TimerDependencies />
 
-### Implement Acrhitecture Platform Specific Dependencies
+### Implement Architecture Platform Specific Dependencies
 
-<AcrhitectureDependencies />
+<ArchitectureDependencies />
 
 ### Implement Reboot Reason Platform Specific Dependencies
 
