--- a/docs/platform/charts.mdx
+++ b/docs/platform/charts.mdx
@@ -84,7 +84,7 @@ or represent a class of bugs, in order to track changes in their occurrence over
 time.
 
 To create an Issue Chart, click on **Create Chart** and select **Issue Chart**.
-Search and select the Issues you're intrerested in and **Add** them. You can
+Search and select the Issues you're interested in and **Add** them. You can
 update the selected Issues later as well.
 
 ### Filtering Charts
