--- a/docs/platform/jira-integration.mdx
+++ b/docs/platform/jira-integration.mdx
@@ -36,7 +36,7 @@ _https://company-name.atlassian.net/_
   [here](https://confluence.atlassian.com/jirakb/how-to-get-project-id-from-the-jira-user-interface-827341414.html).
 - To find the Issue Type ID's, login to Jira in the browser and then navigate to
   `https://<jira-instance-id>/rest/api/3/issuetype` to find the ID's. When the
-  response is returned, the desired field is labled `id`.
+  response is returned, the desired field is labeled `id`.
 
 ```json
 {
