--- a/src/pages/_partials/_steps/_data-transfer-troubleshooting.mdx
+++ b/src/pages/_partials/_steps/_data-transfer-troubleshooting.mdx
@@ -8,4 +8,4 @@ tools to help debug!
   pass through your `user_transport_send_chunk_data()` implementation to test
   data transfer in isolation.
 - A [GDB Script](/docs/mcu/test-data-collection-with-gdb) which can be installed
-  to send chunks programatically every time a breakpoint is hit.
+  to send chunks programmatically every time a breakpoint is hit.
