--- a/src/pages/_partials/_steps/_upload-symbol-file.mdx
+++ b/src/pages/_partials/_steps/_upload-symbol-file.mdx
@@ -1,7 +1,7 @@
 At this point you should be able to generate test events and crashes and push
 the data to the Memfault UI.
 
-You can confirm the error traces and crashes have arrived succesfully by
+You can confirm the error traces and crashes have arrived successfully by
 navigating to the "Issues" page. Follow the link pointed to below and upload a
 symbol file.
 
