--- a/docs/mcu/introduction.mdx
+++ b/docs/mcu/introduction.mdx
@@ -66,13 +66,13 @@ place, a number of modules can easily be integrated into the system:
 - [Error Tracking with Trace Events](/docs/mcu/trace-events) - allows one to
   collect lightweight events (<40 bytes) when error conditions occur. These
   events can be collected while the system is running and can be used to
-  discover how often unexpected errors are occuring (flash write failures, I2C
+  discover how often unexpected errors are occurring (flash write failures, I2C
   bus timeouts, etc).
 
 ### Design Documents
 
 The Memfault data collection system was designed from the ground up with
-embedded devices in mind. Deeper explorations into the designs of the subsytems
+embedded devices in mind. Deeper explorations into the designs of the subsystems
 can be found below:
 
 - [Event Serialization](/docs/mcu/event-serialization-overview) - Describes how
