--- a/docs/mcu/nrf-connect-sdk-guide.mdx
+++ b/docs/mcu/nrf-connect-sdk-guide.mdx
@@ -463,7 +463,7 @@ After this step you will see the trace in the list of issues!
 
 :::tip
 
-You can programatically upload symbol files with the
+You can programmatically upload symbol files with the
 [Memfault CLI tool](/docs/ci/install-memfault-cli).
 
 :::
@@ -480,7 +480,7 @@ to help!
   pass through your `user_transport_send_chunk_data()` implementation to test
   data transfer in isolation.
 - A [GDB Script](/docs/mcu/test-data-collection-with-gdb) which can be installed
-  to send chunks programatically every time a breakpoint is hit.
+  to send chunks programmatically every time a breakpoint is hit.
 
 ## Sending data to Memfault over UDP
 
