--- a/docs/mcu/compact-logs.mdx
+++ b/docs/mcu/compact-logs.mdx
@@ -31,7 +31,7 @@ MEMFAULT_TRACE_EVENT_WITH_LOG(flash_error, "QSPI Flash Erase Failure: error code
 With a formatted string we need to encode the string length as well as the
 entire string in our binary message taking up 41 bytes
 
-```
+```plaintext
 00000000: 5153 5049 2046 6c61 7368 2045 7261 7365  QSPI Flash Erase
 00000010: 2046 6169 6c75 7265 3a20 6572 726f 7220   Failure: error
 00000020: 636f 6465 3a20 3078 35                   code: 0x5
@@ -40,7 +40,7 @@ entire string in our binary message taking up 41 bytes
 where as with a compact log we need to encode a integer id and the arguments to
 be serialized which in this example takes a total of 5 bytes
 
-```
+```plaintext
 00000000: 8218 8805                                ....
 ```
 
@@ -63,13 +63,17 @@ Add the following to your projects `memfault_platform_config.h`:
 Locate the linker script for your project (usually ends with `.ld`) and add the
 following to your linker script
 
-```
+```linker-script
     log_fmt 0xF0000000 (INFO):
     {
-       KEEP(*(*.log_fmt_hdr))
-       KEEP(*(log_fmt))
+        /*
+        Note: binutils >= 0.29 will automatically create this symbol but we set
+        it explicitly for compatibility with older versions
+        */
+        __start_log_fmt = ABSOLUTE(.);
+        KEEP(*(*.log_fmt_hdr))
+        KEEP(*(log_fmt))
     }
-
 ```
 
 ## FAQ
@@ -78,7 +82,7 @@ following to your linker script
 
 Once enabled, if you see the following compiler error:
 
-```
+```plaintext
 memfault/core/compiler_gcc.h:73:45: error: static assertion failed: "## operator not supported, enable gnu extensions on your compiler"
  #  define MEMFAULT_STATIC_ASSERT(cond, msg) _Static_assert(cond, msg)
 ```
