Document our CDN's features in the OTA doc (#216)
* Document our CDN's features in the OTA doc

Also add the same admonition to the top of each platform-specific OTA
guide.

--- a/docs/android/android-releases-integration-guide.mdx
+++ b/docs/android/android-releases-integration-guide.mdx
@@ -4,6 +4,8 @@ title: Android OTA Integration Guide
 sidebar_label: OTA Management
 ---
 
+import OtaCdnFeaturesAdmonition from "@site/src/pages/_partials/_ota-cdn-features-admonition.mdx";
+
 :::info
 
 The Bort SDK includes a full OTA update client, from version 3.7.0 onwards. See
@@ -14,6 +16,8 @@ information.
 
 This tutorial covers how to manage your Android over-the-air update flow with
 Memfault!
+
+<OtaCdnFeaturesAdmonition />
 
 ## Terminology Overview
 
