--- a/docs/linux/linux-releases-integration-guide.mdx
+++ b/docs/linux/linux-releases-integration-guide.mdx
@@ -9,9 +9,12 @@ import LinuxOtaOptionsTabs, {
   OtaCustomTab,
 } from "@site/src/components/LinuxOtaOptionsTabs";
 import TabItem from "@theme/TabItem";
+import OtaCdnFeaturesAdmonition from "@site/src/pages/_partials/_ota-cdn-features-admonition.mdx";
 
 This tutorial covers how to manage your embedded Linux over-the-air update flow
 with Memfault!
+
+<OtaCdnFeaturesAdmonition />
 
 ## Terminology Overview
 
