--- a/docs/mcu/releases-integration-guide.mdx
+++ b/docs/mcu/releases-integration-guide.mdx
@@ -4,8 +4,12 @@ title: MCU OTA Integration Guide
 sidebar_label: OTA Management
 ---
 
+import OtaCdnFeaturesAdmonition from "@site/src/pages/_partials/_ota-cdn-features-admonition.mdx";
+
 This tutorial covers how to manage your firmware over-the-air update flow with
 Memfault!
+
+<OtaCdnFeaturesAdmonition />
 
 ## Terminology Overview
 
