--- a/docs/platform/ota.mdx
+++ b/docs/platform/ota.mdx
@@ -7,6 +7,7 @@ sidebar_label: Over-the-Air Updates (OTA)
 import CheckSquareTwoTone from "@site/src/components/icons/CheckSquareTwoTone";
 import StyledPercentageOutlined from "@site/src/components/icons/StyledPercentageOutlined";
 import TargetVersionFilled from "@site/src/components/icons/TargetVersionFilled";
+import OtaCdnFeaturesAdmonition from "@site/src/pages/_partials/_ota-cdn-features-admonition.mdx";
 
 import DEPLOYMENT_MATRIX_FIGURE_STYLES from "./deploymentMatrixFigureStyles";
 
@@ -16,6 +17,8 @@ Memfault provides secure and scalable updates for all IoT devices
 ([MCU][docs-mcu], [Android][docs-android], [Linux][docs-linux], or a combination
 of them). With [real-time monitoring](/docs/platform/charts) and controlled
 releases, you can debug and ship new releases confidently.
+
+<OtaCdnFeaturesAdmonition />
 
 ## Introduction and Concepts
 
