--- a/docs/mcu/esp8266-rtos-sdk-guide.mdx
+++ b/docs/mcu/esp8266-rtos-sdk-guide.mdx
@@ -315,8 +315,9 @@ Success
 ### Upload Symbol File
 
 At this point you should be able to generate a test trace event and push it to
-the Memfault UI. You can confirm the issue has arrived successfully by navigating
-to the "Issues" page. Follow the link pointed to below and upload a symbol file.
+the Memfault UI. You can confirm the issue has arrived successfully by
+navigating to the "Issues" page. Follow the link pointed to below and upload a
+symbol file.
 
 ![](/img/docs/mcu/first-trace-min.png)
 
