MFLT-5765 Document aggregations (#195)

--- a/docs/platform/charts.mdx
+++ b/docs/platform/charts.mdx
@@ -63,6 +63,15 @@ The list of metrics available in your project is automatically created from the
 metrics collected by your devices. For that reason, at least one device must
 upload data for a given metric before a chart for that metric can be created.
 
+| Aggregation  | Description                                         |
+| ------------ | --------------------------------------------------- |
+| Min          | The lowest reading received.                        |
+| Mean         | Arithmetic mean of all readings.                    |
+| Max          | The highest reading received.                       |
+| Min/Mean/Max | All of the above combined into a single chart.      |
+| Count        | Number of times a (non-ignored) value was received. |
+| Sum          | Sum of all readings.                                |
+
 The aggregation of the metrics is done periodically, usually every few hours. To
 refresh the data inside a chart immediately, click the refresh button in the
 chart itself.
