Docs: add hawkBit linux OTA documentation (#217)
### Summary of changes
Update Linux OTA docs to reflect hawkBit API adoption.

--- a/docs/linux/introduction.mdx
+++ b/docs/linux/introduction.mdx
@@ -9,7 +9,7 @@ embedded Linux-based device.
 
 Memfault's support for embedded Linux devices is a work-in-progress.
 
-OTA / Release Management is currently fully supported through an off-the-shelve
+OTA / Release Management is currently fully supported through an off-the-shelf
 integration with the SWUpdate agent. Read more about it in the
 [OTA / Release Management guide](linux/linux-releases-integration-guide.mdx).
 
