--- a/docs/linux/linux-releases-integration-guide.mdx
+++ b/docs/linux/linux-releases-integration-guide.mdx
@@ -190,25 +190,30 @@ to download the Release on a device!
   <TabItem value="swupdate">
 
 Memfault supports [SWUpdate][3] as a way to update the software on an Embedded
-Linux device using its [Suricatta][4] daemon in [general-purpose HTTP server
-mode][5].
+Linux device using its [Suricatta][4] daemon. It communicates with the server
+using the [hawkBit][5] DDI API standard.
 
 Suricatta is a daemon mode of SWUpdate that runs on a device and polls a remote
-server for updates, downloads them, and installs them. It then reboots the
-system with updated software.
+server for updates, downloads them, and installs them. Once an update is
+downloaded, SWUpdate reboots the system with updated software.
 
-#### Building SWUpdate to include Suricatta in general-purpose HTTP server mode
+#### Building SWUpdate to include Suricatta
 
 Find the following options, either via `menuconfig` or by modifying `defconfig`:
 
 - `CONFIG_SURICATTA=y`: configures SWUpdate to include the Suricatta daemon in
   the build.
-- `CONFIG_SURICATTA_GENERAL=y`: configures Suricatta to use general-purpose HTTP
-  server mode.
-- Unset `CONFIG_SURICATTA_HAWKBIT`: SWUpdate works either in general-purpose
-  HTTP server mode or in Hawkbit mode. Disable Hawkbit support.
+- `CONFIG_SURICATTA_HAWKBIT=y`: configures Suricatta to use hawkBit server mode.
+- Unset `CONFIG_SURICATTA_GENERAL`: SWUpdate works either in hawkBit mode or a
+  general-purpose HTTP server mode. Disable general-purpose HTTP server support.
 
 #### Configuring the Suricatta on-device daemon to use Memfault
+
+:::warning
+
+This section has not been updated for our hawkBit DDI API implementation.
+
+:::
 
 Three sections are required in the configuration file:
 
@@ -272,6 +277,12 @@ Memfault servers every periodically at a random interval of between 14400 and
 
 #### Integration with Yocto
 
+:::warning
+
+This section has not been updated for our hawkBit DDI API implementation.
+
+:::
+
 The [`meta-memfault-swupdate-example`][6] Yocto layer is based on [SWUpdate
 documentation on building with Yocto][7] and should serve as an example of
 building your own Linux image that contains SWUpdate preconfigured to work with
@@ -280,17 +291,6 @@ Memfault.
 We have prepared [a `Dockerfile`][8] that serves as an example of using
 `meta-memfault-swupdate-example` as part of a Poky build. Read more about
 `meta-memfault-swupdate-example` in [the project `README`][6].
-
-[1]: https://github.com/sbabic/meta-swupdate-boards
-[2]: https://www.yoctoproject.org/
-[3]: https://sbabic.github.io/swupdate
-[4]: https://sbabic.github.io/swupdate/suricatta.html
-[5]:
-  https://sbabic.github.io/swupdate/suricatta.html?highlight=general#support-for-general-purpose-http-server
-[6]:
-  https://github.com/memfault/memfault-yocto/tree/main/meta-memfault-swupdate-example
-[7]: https://sbabic.github.io/swupdate/building-with-yocto.html
-[8]: https://github.com/memfault/memfault-yocto/blob/main/Dockerfile.swupdate
 
   </TabItem>
   <TabItem value="custom">
@@ -368,3 +368,11 @@ memfault-reason: latest
 Aborting or Rolling back from a Release which has a firmware regression is easy
 to do from the UI. Simply navigate to "Fleet" -> "Cohorts", click on the picker
 under "Options" and select the "Abort Rollout" option.
+
+[3]: https://sbabic.github.io/swupdate
+[4]: https://sbabic.github.io/swupdate/suricatta.html
+[5]: https://www.eclipse.org/hawkbit/apis/ddi_api/
+[6]:
+  https://github.com/memfault/memfault-yocto/tree/main/meta-memfault-swupdate-example
+[7]: https://sbabic.github.io/swupdate/building-with-yocto.html
+[8]: https://github.com/memfault/memfault-yocto/blob/main/Dockerfile.swupdate
