--- a/docs/platform/software-version-hardware-version.mdx
+++ b/docs/platform/software-version-hardware-version.mdx
@@ -22,6 +22,12 @@ can be used to identify different device types being tracked in the same Project
 (i.e. `smart-toaster` and `smart-oven`) and different board revisions of the
 same device type (i.e. `smart-toaster-evt`, `smart-toaster-pvt`, etc.).
 
+### MCU
+
+The software running on your devices will need to report its Hardware Version.
+Please see the [core/device info component][device-info-header] of the Firmware
+SDK for details on how to set this up on the device's software side.
+
 ### Android
 
 On Android, Memfault uses the `ro.product.board` system property as the device's
@@ -43,10 +49,8 @@ distinguish between build variants (i.e. `main-mcu-dvt` & `main-mcu-evt`).
 
 The software running on your devices will need to report its Software Type
 correctly such that it matches with what has been configured in the Project.
-Please see the
-[core/device info component](https://github.com/memfault/memfault-firmware-sdk/blob/master/components/include/memfault/core/platform/device_info.h)
-of the Firmware SDK for details on how to set this up on the device's software
-side.
+Please see the [core/device info component][device-info-header] of the Firmware
+SDK for details on how to set this up on the device's software side.
 
 ### Android
 
@@ -311,3 +315,6 @@ for each build).
 For an Android application, Memfault stores both the
 [`versionCode` and `versionName`](https://developer.android.com/studio/publish/versioning);
 the `versionCode` is used to compare Software Versions.
+
+[device-info-header]:
+  https://github.com/memfault/memfault-firmware-sdk/blob/master/components/include/memfault/core/platform/device_info.h
